2007-07-13  Akim Demaille  <demaille@gostai.com>

	Improvements
	* ax_boost_thread.m4: Better coding style.
	* urbi-libport.m4: Fix macro invocation.
	* bison++.in: Better message.

2007-07-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Improve boost detection in urbi-libport macro.

        Use the macro from the Autoconf macro archive to detect Boost.
        Pthread is no more necessary, but Boost.Thread is required.

	* urbi-libport.m4: Use ax_boost instead of tc-boost.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Lazyness in bison++
	* bison++.in: When updating the file, if there are differences
	on synclines, keep the old time stamp.
	Should be further improved.

2007-07-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add empty initialization of LDFLAGS.
	* init.mk: Here.

2007-07-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add boost related macros.

        From the Autoconf Macro Archive
        http://autoconf-archive.cryp.to/

	* build-aux/ax_boost.m4: New.
	* build-aux/ax_boost_base.m4: New.
	* build-aux/ax_boost_date_time.m4: New.
	* build-aux/ax_boost_filesystem.m4: New.
	* build-aux/ax_boost_iostreams.m4: New.
	* build-aux/ax_boost_program_options.m4: New.
	* build-aux/ax_boost_python.m4: New.
	* build-aux/ax_boost_regex.m4: New.
	* build-aux/ax_boost_serialization.m4: New.
	* build-aux/ax_boost_signals.m4: New.
	* build-aux/ax_boost_test_exec_monitor.m4: New.
	* build-aux/ax_boost_thread.m4: New.
	* build-aux/ax_boost_unit_test_framework.m4: New.
	* build-aux/ax_boost_wserialization.m4: New.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	* build-aux/tc-boost.m4: Formatting changes.
	Reorder some macros.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	* tc-boost.m4 (TC_HEADER_BOOST_GRAPH): New, extracted from...
	(TC_HEADER_BOOST): here.
	Use tc_cv_* instead of ac_cv_*.
	Shorten variable scope.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	TC_HEADER_BOOST
	* build-aux/tc-boost.m4: New.